--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+*{
+    background-color: #FFF1E3;
+}
+
+.operators{
+    background-color: #FF9F1C;
+}
